@@ -11,6 +11,7 @@ applets/clock/clock.schemas.in
 applets/clock/clock-location.c
 applets/clock/clock-location-tile.c
 applets/clock/clock-utils.c
+applets/clock/gnome-clock-applet-mechanism.policy.in
 applets/clock/timezone.glade
 applets/clock/tz-sel-dialog.c
 applets/clock/tz-window.c
