@@ -1,3 +1,7 @@
+2008-01-28  Vincent Untz  <vuntz@gnome.org>
+
+	* POTFILES.in: updated
+
 2008-01-27  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
